# kubernetes-namespace-watchdog

./: .dockerignore  Cargo.toml  Dockerfile  flake.nix
common/: Cargo.toml
common/src/: lib.rs
owner/: Cargo.toml
owner/examples/: process.rs
owner/src/: lib.rs  main.rs
src/: lib.rs
watcher/: Cargo.toml  Dockerfile  docker-bake.hcl
watcher/src/: main.rs
