[workspace]
resolver = "2"
members = [
	"watcher",
	"owner",
	"common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Julius Michaelis <gitter@liftm.de>"]

[workspace.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
humantime = "2.1.0"
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
kube = { version = "0.87.1", features = ["ws", "runtime", "kube-derive", "kube-runtime", "gzip", "admission", "derive", "jsonpatch"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["macros", "signal"] }
warp = "0.3.6"
