[package]
name = "kubernetes-namespace-watchdog-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true }
humantime-serde = "1.1.1"
serde.workspace = true
serde_with.workspace = true
