[package]
name = "kubernetes-namespace-watchdog-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { workspace = true, optional = true }
humantime-serde = "1.1.1"
hyper = { version = "1.0.0", features = ["http1", "client"] }
k8s-openapi.workspace = true
kube = { workspace = true, features = ["runtime", "ws"] }
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
