[package]
name = "namespace-watchdog-owner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.75"
clap.workspace = true
humantime.workspace = true
hyper = { version = "1.0.0", features = ["client", "http1"] }
k8s-openapi = { workspace = true, features = ["v1_26"] }
kube = { workspace = true, features = ["runtime", "ws"] }
tokio.workspace = true
