[package]
name = "kubernetes-namespace-watchdog-watcher"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
humantime-serde = "1.1.1"
k8s-openapi = { workspace = true, features = ["v1_26"] }
kube.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { version = "0.1.14", features = ["signal"] }
warp.workspace = true
